<?xml version="1.0"?>
<package format="2">
  <name>rc_genicam_driver</name>
  <version>0.2.0</version>
  <description>
    The rc_genicam_driver provides data from a Roboception rc_visard 3D sensor or rc_cube on several ROS topics.
  </description>

  <maintainer email="felix.ruess@roboception.de">Felix Ruess</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rc_visard_driver</url>
  <url type="repository">https://github.com/roboception/rc_genicam_driver</url>
  <url type="bugtracker">https://github.com/roboception/rc_genicam_driver/issues</url>

  <author email="heiko.hirschmueller@roboception.de">Heiko Hirschmueller</author>
  <author email="felix.ruess@roboception.de">Felix Ruess</author>

  <!-- system dependencies -->
  <build_depend>protobuf-dev</build_depend>
  <exec_depend>protobuf</exec_depend>
  <depend>curl</depend>
  <depend version_gte="2.3.0">rc_genicam_api</depend>
  <depend version_gte="0.5.0">rc_common_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- depend is a shorthand for build_depend, build_export_depend and exec_depend -->
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>diagnostic_updater</depend>
  <!-- <depend>diagnostic_msgs</depend> -->

  <doc_depend>doxygen</doc_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/rc_genicam_driver_nodelet.xml"/>
  </export>
</package>
